[gd_scene load_steps=54 format=3 uid="uid://c4cbde7hcnqcd"]

[ext_resource type="Script" path="res://crops/turnip.gd" id="1_qvich"]
[ext_resource type="AudioStream" uid="uid://cqxx6xv8u6io1" path="res://crops/吸盤.mp3" id="2_k5hka"]
[ext_resource type="AudioStream" uid="uid://cqx1kh3kmbgvn" path="res://crops/効果音ラボ_水滴3.mp3" id="3_a20nm"]
[ext_resource type="Shader" path="res://shader/outline.gdshader" id="4_0n42n"]
[ext_resource type="Texture2D" uid="uid://jdwqgkdyry0t" path="res://crops/seed.png" id="4_hwna2"]
[ext_resource type="Texture2D" uid="uid://bywxatr6ke5hb" path="res://crops/crops.png" id="6_irfrm"]
[ext_resource type="Texture2D" uid="uid://407b3p3tan0m" path="res://crops/water.png" id="7_53m72"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gfkep"]
shader = ExtResource("4_0n42n")
shader_parameter/enabled = true
shader_parameter/is_selected = false

[sub_resource type="AtlasTexture" id="AtlasTexture_lsysm"]
atlas = ExtResource("4_hwna2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_84ggp"]
atlas = ExtResource("4_hwna2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1tuj"]
atlas = ExtResource("4_hwna2")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ee6w7"]
atlas = ExtResource("4_hwna2")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_86cvv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lsysm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_84ggp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1tuj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ee6w7")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e06t7"]
shader = ExtResource("4_0n42n")
shader_parameter/enabled = false
shader_parameter/is_selected = false

[sub_resource type="AtlasTexture" id="AtlasTexture_p2yh0"]
atlas = ExtResource("6_irfrm")
region = Rect2(48, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k5l3u"]
atlas = ExtResource("6_irfrm")
region = Rect2(64, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pxsd"]
atlas = ExtResource("6_irfrm")
region = Rect2(80, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye871"]
atlas = ExtResource("6_irfrm")
region = Rect2(0, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1briv"]
atlas = ExtResource("6_irfrm")
region = Rect2(16, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2jvs"]
atlas = ExtResource("6_irfrm")
region = Rect2(32, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_urq1j"]
atlas = ExtResource("6_irfrm")
region = Rect2(48, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1y66"]
atlas = ExtResource("6_irfrm")
region = Rect2(80, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5acq4"]
atlas = ExtResource("6_irfrm")
region = Rect2(0, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ikvar"]
atlas = ExtResource("6_irfrm")
region = Rect2(16, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7imm"]
atlas = ExtResource("6_irfrm")
region = Rect2(64, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_va6qr"]
atlas = ExtResource("6_irfrm")
region = Rect2(80, 32, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ora32"]
atlas = ExtResource("6_irfrm")
region = Rect2(0, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_knugs"]
atlas = ExtResource("6_irfrm")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pvwnw"]
atlas = ExtResource("6_irfrm")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gylg"]
atlas = ExtResource("6_irfrm")
region = Rect2(48, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkvwr"]
atlas = ExtResource("6_irfrm")
region = Rect2(64, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kmtuc"]
atlas = ExtResource("6_irfrm")
region = Rect2(80, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0nrhj"]
atlas = ExtResource("6_irfrm")
region = Rect2(0, 160, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_af77a"]
atlas = ExtResource("6_irfrm")
region = Rect2(16, 160, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dl86i"]
atlas = ExtResource("6_irfrm")
region = Rect2(32, 160, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2w8dm"]
atlas = ExtResource("6_irfrm")
region = Rect2(48, 160, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr4yi"]
atlas = ExtResource("6_irfrm")
region = Rect2(64, 160, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0saot"]
atlas = ExtResource("6_irfrm")
region = Rect2(0, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bsu4e"]
atlas = ExtResource("6_irfrm")
region = Rect2(16, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xgxqk"]
atlas = ExtResource("6_irfrm")
region = Rect2(32, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k85hf"]
atlas = ExtResource("6_irfrm")
region = Rect2(48, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrexs"]
atlas = ExtResource("6_irfrm")
region = Rect2(64, 96, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rbjs3"]
atlas = ExtResource("6_irfrm")
region = Rect2(0, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gabyx"]
atlas = ExtResource("6_irfrm")
region = Rect2(16, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_814a5"]
atlas = ExtResource("6_irfrm")
region = Rect2(32, 0, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e56rx"]
atlas = ExtResource("6_irfrm")
region = Rect2(32, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iw1d"]
atlas = ExtResource("6_irfrm")
region = Rect2(48, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdpvu"]
atlas = ExtResource("6_irfrm")
region = Rect2(64, 128, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_taipe"]
atlas = ExtResource("6_irfrm")
region = Rect2(80, 128, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_s3ou8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2yh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k5l3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pxsd")
}],
"loop": true,
"name": &"asparagus",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye871")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1briv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2jvs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urq1j")
}],
"loop": true,
"name": &"cabbage",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1y66")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5acq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ikvar")
}],
"loop": true,
"name": &"caisim",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7imm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_va6qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ora32")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_knugs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pvwnw")
}],
"loop": true,
"name": &"cucumber",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gylg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkvwr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kmtuc")
}],
"loop": true,
"name": &"potato",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0nrhj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_af77a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dl86i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2w8dm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr4yi")
}],
"loop": true,
"name": &"pumpkin",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0saot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsu4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xgxqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k85hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrexs")
}],
"loop": true,
"name": &"strawberry",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rbjs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gabyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_814a5")
}],
"loop": true,
"name": &"tunip",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e56rx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iw1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdpvu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_taipe")
}],
"loop": true,
"name": &"wheat",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_uqv8v"]

[sub_resource type="AtlasTexture" id="AtlasTexture_0xouw"]
atlas = ExtResource("7_53m72")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_chfxd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xouw")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="Turnip" type="Node2D"]
script = ExtResource("1_qvich")
harvest_sound = ExtResource("2_k5hka")
water_sound = ExtResource("3_a20nm")

[node name="SeedAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_gfkep")
sprite_frames = SubResource("SpriteFrames_86cvv")
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://crops/seed.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "7ca928754d72b0ac5217b3caa66cfa64"

[node name="CropAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_e06t7")
position = Vector2(0, -9)
sprite_frames = SubResource("SpriteFrames_s3ou8")
animation = &"asparagus"
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://crops/crops.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "531983d0f2b4caf9abf38312829cc0b1"
metadata/_aseprite_wizard_interface_config_ = {
"layer_section": true,
"slice_section": true
}

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_uqv8v")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0

[node name="NeetWaterAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -11)
sprite_frames = SubResource("SpriteFrames_chfxd")
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"slice": "",
"source": "res://crops/water.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "5644f7557d8babffa1b8fbdea7a3585d"

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
